--- a/index.html
+++ b/index.html
@@ -55,116 +55,46 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <section class="container">
-                    <h2 class="section-title">
-                         <a href="index.html">Welcome</a></h2>
-
-                    <p class="large-text">Investing in biotechnology companies can be very hard. There is a
-                       very high level of failure in this industry. There are many complicated concepts that 
-                       make it hard to understand. This can be very intimidating for many investors. This site
-                       is designed to be a source of education and information for investors. It is not 
-                       designed to be financial advice. If you find interest in any of the companies here, 
-                       you should consult your financial advisor before making any investment decisions. 
-                       This is a very risky area of investing. It is not for everyone, and there is a high level
-                       of risk as many of these companies fail.
-               </section>
-
-               <section class="container">
-                    <h2 class="section-title">
-                         <a href="pages/innovation.html">Innovation</a>
-                    </h2>
-
-                    <p class="large-text">
-                       The first section is about the discovery and the tracking of
-                       science in the biotechnology industry that is leading the innovation of the future.
-                       We will look at what technologies in the science appear to be leading the way forward.
-                       These will be just my opinions and ideas. Your opinions might be different. That is OK.
-                       There is a lot of great science
-                       going on in this industry. Some of it will appeal more to one investor than another. 
-                       It is all about personal opinion. The innovation section will be designed to give ideas for
-                       investors as a jumping off point. Not all areas of innovation will work out. Sometimes great
-                       science still fails. Sometimes it runs into obstacles or just doesn't live up to expectations.
-                       The innovation section will change as science evolves. There will always be science that
-                       matures while new science is discovered. This section will always be about "what's next"?
-                    </p>
-               </section>
-
-               <section class="container">
-                    <h2 class="section-title">
-                         <a href="pages/companies.html">The Companies</a>
-                    </h2>
-
-                    <p class="large-text">
-                         The next section of the site will be about all the companies behind the areas of
-                         innovation that are driving biotechnology forward. These are the companies that could
-                         be the next big breakthrough. Many will fail. The failure rate in biotechnology is over
-                         90%. That means the vast majority of these companies can and probably will fail. I
-                         think that is what appeals to many investors about biotechnology. It is the treasure hunt
-                         of finding the next big breakthrough company. I will cover the companies. I will talk
-                         about the management, the financials, the science, the quality of the data, and propose
-                         my best guess at valuation. This section will be the most opinionated part of the website.
-                         This will be my thoughts and impressions based on my experience in investing in these
-                         companies. I will also disclose that I will personally be invested in many of these companies.
-                         You should always do your own research into any company and consult a professional financial
-                         advisor before making any investment. 
-                    </p>
-               </section>
-
-               <section class="container">
-                    <h2 class="section-title">
-                         <a href="investing/investing.html">Investing</a>
-                    </h2>
-
-                    <p class="large-text">
-                         Investing in biotech can be hard. The statictics show that 90% of the science that enters the clinic fails.
-                         When investing in biotech, I find that I do better when I have a good strategy. I think strategy trumps any conviction
-                         I might have in any company. I blend a hybrid strategy of trading and investing that works well for me.
-                         I am not a financial advisor, but I have been investing for 27 years. Here in the Investing section,
-                         I will share my biotech portfolio and all my strategies for investing. This section will focus on sharing
-                         how I build my portfolio by focusing on these key innvoation themes. I will share how I reseach companies
-                         and rank them from best to worst for each science theme. I will share how I manage my portfolio strategy with
-                         trading around my core position. I will share my system for valuing biotech companies. I will share my rules
-                         for staying disciplined. This is not designed to be financial advice. You should always consulte a professional 
-                         financial advisor before making any investments. 
-                    </p>
-               </section>
-
-               <section class="container">
-                    <h2 class="section-title">
-                         <a href="pages/science.html">The Science</a>
-                    </h2>
-
-                    <p class="large-text">
-                         The next section of the site will be about the science behind the companies. I tend to focus on
-                         a few key science themes with Genetics, Hematology, Immunology and Oncology. They tend to be 
-                         very complementary with each other when it comes to diseases. I tend to focus on the use of
-                         technology in drug discovery, genetic diseases and oncology. I find having a focus on a few key topics
-                         offers expertise and helps me improve my success rates. I love teaching others about science.
-                         This section will include everything educational about topics like Hematology, 
-                         Immunology, Genetics and Oncology. This is a learning resource. It is not necessary to know the science
-                         to be a biotechnology investor, but it really helps. I find that scientists, doctors, students
-                         and patients tend to like this section the most. Just a word of caution as this is not designed
-                         to be medical advice. You should always refer to your doctor.
-               </section>
                
-               <section class="container">
-                    <h2 class="section-title">
-                         <a href="pages/clinicaldata.html">Clinical Data</a>
-                    </h2>
+               <div class="front-page">
+                    <section class="news-updates">
+                         <div>
+                              <h2 class="section-title">Recent News</h2>
+                              <p>
+                                   1/27/2023: Sold my LABD hedge position as the XBI looks to be breaking out of its range. It looks like
+                                   resistance is around $90 so it could still go either way. My plan is to hope we hit $95 on the 
+                                   XBI in the short term so I can sell some of my losers and raise some cash. That way I have money
+                                   to put to work when it pulls back again. 
+                              </p>
+                         </div>
+                    </section>
 
-                    <p class="large-text">
-                         The last section will be about breaking down the clinical data. I think the hardest part
-                         of being a biotechnology investor is knowing how to read the clinical data, and how to figure out 
-                         what it all means. There are a lot of technical endpoints that can confuse investors. Sometimes
-                         companies fail to design a good clinical trial. This happens too often. Many of these young companies
-                         are not experts in designing or running clinical trials. This section will be some teaching about 
-                         the clinical trials and the data to look for, but a lot of it will be going through actual clinical 
-                         data readouts by companies and breaking it down. I am not an expert in reading clinical data, but I 
-                         have been doing it for many years. Most of the takes I give on clinical data will be just my point
-                         of view. Other investors might not agree with my point of view on any data readouts. That is OK. There
-                         is a lot to consider when looking at data to include data from competitors.
-                    </p>
-               </section>
+                    <section class="news-updates">
+                         <div>
+                              <h2 class="section-title">Website Updates</h2>
+                              <p>
+                                   1/27/2023: Working on building a new front page with more current updates and news so that it has current events
+                                   so people will check back often to see what is new. 
+                              </p>
+                         </div>
+                    </section>
+               </div>
+               <div class="front-page">
+                    <section class="news-updates">
+                         <div>
+                              <h2 class="section-title">Recent Company Presentations</h2>
+                              <p><a href="https://www.youtube.com/watch?v=NcxccxI8PWQ&t=2364s">1/26/2023: Recursion Science Day on Youtube</a></p>
+                         </div>
+                    </section>
+
+                    <section class="news-updates">
+                         <div>
+                              <h2 class="section-title">Key Twitter Threads</h2>
+                              <p>Coming Soon</p>
+                         </div>
+                    </section>
+               </div>
+               
           </main>
 
           <!--Here Starts the Footer-->
