--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -57,7 +57,27 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p>This page is under construction</p>
+              
+               <section class="container">
+                    <h2 class="section-title">
+                         <a href="pages/clinicaldata.html">Clinical Data</a>
+                    </h2>
+
+                    <p class="large-text">
+                         This section is about breaking down the clinical data. I think the hardest part
+                         of being a biotechnology investor is knowing how to read the clinical data, and how to figure out 
+                         what it all means. There are a lot of technical endpoints that can confuse investors. Sometimes
+                         companies fail to design a good clinical trial. This happens too often. Many of these young companies
+                         are not experts in designing or running clinical trials. This section will be some teaching about 
+                         the clinical trials and the data to look for, but a lot of it will be going through actual clinical 
+                         data readouts by companies and breaking it down. I am not an expert in reading clinical data, but I 
+                         have been doing it for many years. Most of the takes I give on clinical data will be just my point
+                         of view. Other investors might not agree with my point of view on any data readouts. That is OK. There
+                         is a lot to consider when looking at data to include data from competitors.
+                    </p>
+               </section>
+
+
           </main>
 
           <!--Here Starts the Footer-->
