--- a/pages/companies.html
+++ b/pages/companies.html
@@ -57,8 +57,27 @@
           <!--Here Starts the Main Body-->
 
           <main>
+
+               <section class="container">
+                    <h2 class="section-title">
+                         The Companies Innovating in Biotech
+                    </h2>
+
+                    <p class="large-text">
+                         This section of the site is about all the companies behind the areas of innovation that are driving 
+                         biotech forward. These are the companies that could be driving the next big breakthroughs in the science. 
+                         Many of them will most likely fail. The failure rate in biotechnology is over 90%. I think that is what 
+                         appeals to me as an investors in biotechnology. It is the treasure hunt of finding the next big breakthrough 
+                         company. I will cover the companies. I will profile each company with assessments of the company, science, 
+                         pipeline and valuation. This section will be the most opinionated part of this website. This will be my 
+                         thoughts and impressions based on my experience in investing in the biotech space. I will also disclose that 
+                         I am personally invested in many of these companies. You should always do your own research into any company 
+                         and consult a professional financial advisor before making any investment. 
+                    </p>
+               </section>
+
                <section>
-                    <h2 class="list-header">TechBio</h2>
+                    <h2 class="section-title">TechBio</h2>
                          <ol>
                          <li class="tech-list">
                               <a href="../pages/relay.html">Relay Therapeutics (RLAY)</a>
@@ -79,7 +98,7 @@
                </section>  
                
                <section>
-                    <h2 class="list-header">CRISPR</h2>
+                    <h2 class="section-title">CRISPR</h2>
                     <ol>
                          <li class="tech-list">
                               <a href="../pages/beam.html">Beam Therapeutics (BEAM)</a>
@@ -100,7 +119,7 @@
                </section>  
 
                <section>
-                    <h2 class="list-header">SynBio</h2>
+                    <h2 class="section-title">SynBio</h2>
                     <ol>
                          <li class="tech-list">
                               <a href="../pages/ginkgo.html">Ginkgo Bioworks (DNA)</a>
@@ -112,7 +131,7 @@
                </section> 
                
                <section>
-                    <h2 class="list-header">iPSC</h2>
+                    <h2 class="section-title">iPSC</h2>
                     <ol>
                          <li class="tech-list">
                               <a href="../pages/ipsc.html">Century Therapeutics (IPSC)</a>
@@ -130,7 +149,7 @@
                </section>  
 
                <section>
-                    <h2 class="list-header">Personalized Medicine</h2>
+                    <h2 class="section-title">Personalized Medicine</h2>
                     <ol>
                          <li class="tech-list">
                               <a href="../pages/blueprint.html">Blueprint Medicines (BPMC)</a>
@@ -151,7 +170,7 @@
                </section>  
 
                <section>
-                    <h2 class="list-header">Private CRISPR Companies</h2>
+                    <h2 class="section-title">Private CRISPR Companies</h2>
                     <ol>
                          <li class="tech-list">
                               <a href="../pages/mammoth.html">Mammoth Biosciences</a>
