--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -57,8 +57,26 @@
           <!--Here Starts the Main Body-->
 
           <main>
+
+               <section class="container">
+                    <h2 class="section-title">
+                         Innovation in the Biotech Space</a>
+                    </h2>
+
+                    <p class="large-text">
+                       This section is about the discovery and the tracking of science in the biotechnology industry that is 
+                       leading the innovation of the future. Here I will look at the technologies driving the science forward.
+                       This is about finding the cutting edge of science around Genetics, Immunology and Oncology. Those are the 
+                       areas I focus on. These will be just my opinions and ideas. The innovation section is designed to give ideas for
+                       investors as a jumping off point. I don't know if all of these areas of innovation will work out. Sometimes
+                       great science still fails. Sometimes it runs into challenges or just doesn't live up to expectations. This 
+                       innovation section will change as science evolves. There will always be science that matures while new 
+                       science is discovered. This section will always be about "what's next"?
+                    </p>
+               </section>
+
                <section class="list-border">
-                    <h2 class="list-header">Top Innovation Themes</h2>
+                    <h2 class="section-title">Top Innovation Themes</h2>
                     <div class="list-container">
                     <ol class="list-align">
                          <li class="tech-list"><a href="#techbio">TechBio</a></li>
@@ -81,7 +99,7 @@
                          lower the cost. It can automate complex processes by replacing workers with robotics. 
                          This can save a lot on cost. Automation in the lab is a big cost savings to many 
                          companies. The other place where technology can really help is using Artificial 
-                         Intelligence and Machine Laerning algorithms to improve on the rate of success
+                         Intelligence and Machine Learning algorithms to improve on the rate of success
                          and help lower costs. In traditional drug discovery, hundreds of molecules would have to be 
                          tested by hand in the lab to see which molecule would perform best. The use of AI and ML 
                          algorithms can screen thousands of molecules and model which ones have the highest rates
