--- a/pages/science.html
+++ b/pages/science.html
@@ -58,6 +58,20 @@
 
           <main>
 
+               <section class="container">
+                    <h2 class="section-title">
+                         Learn The Science
+                    </h2>
+
+                    <p class="large-text">
+                         This section is about the science behind the companies. I love learning about the science, and I love 
+                         teaching others about science. This section will include everything educational about topics like Hematology, 
+                         Immunology, Genetics and Oncology. I plan to keep adding new science topics over time. This is a learning 
+                         resource. It is not necessary to know the science to be a biotechnology investor, but it really helps. I 
+                         find that scientists, doctors, students and patients tend to like this section the most. Just a word of 
+                         caution as this is not designed to be medical advice. You should always refer to your doctor.
+               </section>
+
                <div class="science-layout">
                     <section class="science-topic">
                          <h2  class="science-list"><a href="../learning/signaling.html">Cell Signaling</a></h2>
