--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -60,7 +60,7 @@
               
                <section class="container">
                     <h2 class="section-title">
-                         <a href="pages/clinicaldata.html">Clinical Data</a>
+                         Clinical Data
                     </h2>
 
                     <p class="large-text">
