Front Page updates

--- a/index.html
+++ b/index.html
@@ -82,15 +82,20 @@
                <div class="front-page">
                     <section class="news-updates">
                          <div>
-                              <h2 class="section-title">Recent Company Presentations</h2>
-                              <p><a href="https://www.youtube.com/watch?v=NcxccxI8PWQ&t=2364s">1/26/2023: Recursion Science Day on Youtube</a></p>
+                              <h2 class="section-title">Youtube Featured Video</h2>
+                              <div class="videos">
+                                   <iframe src="https://www.youtube.com/embed/NcxccxI8PWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                         
+                              </div>
                          </div>
                     </section>
 
                     <section class="news-updates">
                          <div>
-                              <h2 class="section-title">Key Twitter Threads</h2>
-                              <p>Coming Soon</p>
+                              <h2 class="section-title">Twitter Feature Thread</h2>
+                              <div>
+                                   <blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">1/ <a href="https://twitter.com/search?q=%24SANA&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$SANA</a> has announced that the <a href="https://twitter.com/US_FDA?ref_src=twsrc%5Etfw">@US_FDA</a> has cleared its Investigational New Drug <a href="https://twitter.com/hashtag/IND?src=hash&amp;ref_src=twsrc%5Etfw">#IND</a> application to initiate a first-in-human study of SC291 in patients with various B-cell malignancies such as <a href="https://twitter.com/hashtag/lymphoma?src=hash&amp;ref_src=twsrc%5Etfw">#lymphoma</a> &amp; <a href="https://twitter.com/hashtag/leukaemia?src=hash&amp;ref_src=twsrc%5Etfw">#leukaemia</a>. <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://twitter.com/hashtag/Genomics?src=hash&amp;ref_src=twsrc%5Etfw">#Genomics</a> <a href="https://twitter.com/hashtag/GeneTherapy?src=hash&amp;ref_src=twsrc%5Etfw">#GeneTherapy</a> <a href="https://twitter.com/hashtag/CellTherapy?src=hash&amp;ref_src=twsrc%5Etfw">#CellTherapy</a> <a href="https://twitter.com/hashtag/Cancer?src=hash&amp;ref_src=twsrc%5Etfw">#Cancer</a> <a href="https://t.co/tHJXt2pqBy">pic.twitter.com/tHJXt2pqBy</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1619022691297796096?ref_src=twsrc%5Etfw">January 27, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                              </div>
                          </div>
                     </section>
                </div>
