Updates to Main Page

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                          <div>
                               <h2 class="section-title">Recent News</h2>
                               <p>
-                                   1/27/2023: Sold my LABD hedge position as the XBI looks to be breaking out of its range. It looks like
-                                   resistance is around $90 so it could still go either way. My plan is to hope we hit $95 on the 
-                                   XBI in the short term so I can sell some of my losers and raise some cash. That way I have money
-                                   to put to work when it pulls back again. 
+                                   <strong>1/27/2023: </strong> Sold my LABD hedge position as the XBI looks to be breaking out of its range. It 
+                                   looks like resistance is around $90 so it could still go either way. My plan is to hope we hit 
+                                   $95 on the XBI in the short term so I can sell some of my losers and raise some cash. That way 
+                                   I have money to put to work when it pulls back again.
                               </p>
                          </div>
                     </section>
@@ -73,7 +73,7 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p>
-                                   1/27/2023: Working on building a new front page with more current updates and news so that it has current events
+                                   <strong>1/27/2023: </strong> Working on building a new front page with more current updates and news so that it has current events
                                    so people will check back often to see what is new. 
                               </p>
                          </div>
@@ -92,8 +92,8 @@
 
                     <section class="news-updates">
                          <div>
-                              <h2 class="section-title">Twitter Feature Thread</h2>
-                              <div>
+                              <h2 class="section-title">Twitter Featured Thread</h2>
+                              <div class="videos">
                                    <blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">1/ <a href="https://twitter.com/search?q=%24SANA&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$SANA</a> has announced that the <a href="https://twitter.com/US_FDA?ref_src=twsrc%5Etfw">@US_FDA</a> has cleared its Investigational New Drug <a href="https://twitter.com/hashtag/IND?src=hash&amp;ref_src=twsrc%5Etfw">#IND</a> application to initiate a first-in-human study of SC291 in patients with various B-cell malignancies such as <a href="https://twitter.com/hashtag/lymphoma?src=hash&amp;ref_src=twsrc%5Etfw">#lymphoma</a> &amp; <a href="https://twitter.com/hashtag/leukaemia?src=hash&amp;ref_src=twsrc%5Etfw">#leukaemia</a>. <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://twitter.com/hashtag/Genomics?src=hash&amp;ref_src=twsrc%5Etfw">#Genomics</a> <a href="https://twitter.com/hashtag/GeneTherapy?src=hash&amp;ref_src=twsrc%5Etfw">#GeneTherapy</a> <a href="https://twitter.com/hashtag/CellTherapy?src=hash&amp;ref_src=twsrc%5Etfw">#CellTherapy</a> <a href="https://twitter.com/hashtag/Cancer?src=hash&amp;ref_src=twsrc%5Etfw">#Cancer</a> <a href="https://t.co/tHJXt2pqBy">pic.twitter.com/tHJXt2pqBy</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1619022691297796096?ref_src=twsrc%5Etfw">January 27, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
