--- a/learning/hematology.html
+++ b/learning/hematology.html
@@ -171,7 +171,74 @@
                     <section>
                          <h2 class="science-headers" id="iron">Iron Metabolism</h2>
                          <p> 
-                               
+                               Iron comes in 2 forms with Ferric Iron (Fe3+) and Ferrous Iron (Fe2+). Which form Iron is in at any point in 
+                               the body depends on where it is currently at. We eat iron in both forms. Only the Fe2+ can enter the body 
+                               in the small intestines. The stomach will convert Fe3+ into Fe2+ through chemical reactions. The saying you 
+                               can use to remember this is, "Fe2 goes INTO the body and INTO the Red Blood cells". The only other source 
+                               of iron in the body is recycling of old Red Blood cells my the macrophages in the spleen. The body has no 
+                               natural mechanism to remove excess iron. That makes the absorption of iron a very highly regulated process. 
+                               This comes into play during iron overload (Hemochromotosis). The only effective way to remove too much iron 
+                               from the body is Chelation therapy. This is important in many anemias where the treatment is to give Red Blood 
+                               Cells. All these new cells transferred into the patient will eventually get recycled and all that iron ends 
+                               up in the body's supply causing iron overload.
+                         </p>
+                         <p>
+                              Ferrous Iron enters into the Enterocytes of the Duodenum of the GI tract through a transporter called DMT1 
+                              (Divalent Metal Transporter 1). This transporter can only accept the Ferrous (Fe2+) iron which we call 
+                              Heme Iron as it is the only kind of iron that can be used in Red Blood Cells. For patients who have disease 
+                              of the bowl like Celiacs or had bowl surgeries that effect the duodenum of the small bowl, they can have 
+                              problems absorbing iron through food sources. They will need supplemental iron usually by muscular 
+                              injection or IV. 
+                         </p>
+                         <p>
+                              Once the iron is inside the Enterocyte, it can be absorbed into the blood steam if necessary. The 
+                              enterocytes turn over frequently. That means any iron that is not needed and absorbed by the body 
+                              will be shed with the enterocytes into the waste. The movement of the iron from the enterocyte into the 
+                              blood steam requires active transport by the enterocyte through a transport protein called Ferroportin. 
+                              This sends the iron into the blood steam in the form of Fe3+ Ferric iron. The iron needs be transported 
+                              in the blood by binding to a transport protein called Transferrin. That is because iron is a statically 
+                              charged element. It can cause serious damage if not bound to Transferrin. The iron gets stored in the 
+                              body in 2 places. The first is it is stored in the Macrophages of the Bone Marrow where it is used to 
+                              create Red Blood cells. The main storage of the iron is in the liver. Liver stores of iron are regulated 
+                              by a protein called Hepcidin. When the stores in the liver are full, Hepcidin will bind to the ferroportin 
+                              receptor on the enterocytes and stop the intake of the iron into the body. When iron stores run low, Hepcidin 
+                              will drop and allow iron to pass into the body. When iron gets stored in cells like Macrophages or the 
+                              Liver, it gets bound to a protein called Ferritin. The Ferritin storage protein of iron and the Transferrin 
+                              transport protein for iron are key diagnostic tools. 
+                         </p>
+                         <p>
+                              When iron is in need, the ferritin will drop as there is no iron to store. The Transferrin will become 
+                              elevated in the blood as its looking for any iron it can find. When iron levels are high, the ferritin 
+                              will increase in an attempt to store as much of the excess as possible. The transferrin in circulation 
+                              will drop as there is no need to find more iron. With this understanding, we can use ferritin and transferrin 
+                              levels as diagnostic tools. We refer to them as iron studies.
+                         </p>
+                         <p>
+                              Ferritin for storing iron is an acute phase reactant. This is because bacteria love and need iron to thrive. 
+                              When there is an infection or inflammation, the liver increases the level of ferritin to absorb and hide 
+                              all the iron from the bacteria. This becomes important in chronic diseases where there is inflammation. The 
+                              body will tend to hide the iron because it thinks it has an infection. There is no defect in the body's 
+                              ability to absorb or use the iron. The iron is just being hidden from the body because of the inflammation. 
+                              The main issue for iron in the body is iron deficiency. This is the most common anemia in the world. Most 
+                              of it is nutritional anemia due to lack of food.
+                         </p>
+                         <p>
+                              Iron Deficiency Anemia do apply in the US mostly around a few key areas. The first in Vegan and Vegetarian 
+                              people who don't pay attention to their nutrition as most heme iron comes from meats. Since Iron is so 
+                              important to Red Blood cells, iron deficiency anemias will occur where heavy cell creation is being done 
+                              like pregnancy and early child development. This is why we use prenatal supplements to give those extra 
+                              iron and vitamins. Iron's role in the body will be to create the Hemogobin for the red blood cells. That is because the iron 
+                              molecule is charged, and it bind oxygen very well. We will look deeper an Iron Deficiency Anemia later.
+                         </p>
+                         <p>
+                              There is a series of test for the iron in the body called iron studies. They include the level of free 
+                              iron in the circulation which is low because it can be harmful. They include the ferritin levels which 
+                              can be a sign of iron sequestration due to chronic disease. The final test is the Total Iron Binding 
+                              Capacity (TIBC). This measures that amount of the transferrin there is in circulation by measuring the 
+                              number of binding capacity. The last number you may see in these studies is the saturation.  Iron saturation 
+                              can tell you how much of the total capacity of the Transferrin is actually binding to iron. This is usually 
+                              represented as a percentage. This is usually 20% to 50%. High levels could indicate the body is in 
+                              need of iron. 
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
 
